# ai-news-digest

./: README.md  main.py  pyproject.toml  test_youtube_scraper.py
.github/workflows/: daily_digest.yml
app/: config.py  sources.py
app/agent/: graph.py  prompts.py
app/models/: database.py
app/scrapers/: blog.py  youtube.py
app/services/: __init__.py  email.py  scheduler.py
docker/: docker-compose.yml
tests/: __init__.py  test_youtube.py
