[project]
name = "ai-news-aggregator-v2"
version = "0.1.0"
description = "AI-powered news aggregator with daily digest via email"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain / LangGraph
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # Scraping
    "feedparser>=6.0.11",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",

    # YouTube transcripts
    "youtube-transcript-api>=1.0.0",

    # Email
    "resend>=2.0.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Config / env
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Utilities
    "tenacity>=8.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"